# examples/CMakeLists.txt

# The numbers are used in case in the future we want to create
# additional examples of a given class or set of classes.

add_executable(time_example_1 time_example_1.cpp)
target_link_libraries(time_example_1 gnsstk)

add_executable(Rinex3ObsStream_example_1 Rinex3ObsStream_example_1.cpp)
target_link_libraries(Rinex3ObsStream_example_1 gnsstk)

add_executable(Rinex3ObsStream_example_2 Rinex3ObsStream_example_2.cpp)
target_link_libraries(Rinex3ObsStream_example_2 gnsstk)

add_executable(PRSolution_example_1 PRSolution_example_1.cpp)
target_link_libraries(PRSolution_example_1 gnsstk)

add_executable(RinexObsID_custom_example RinexObsID_custom_example.cpp)
target_link_libraries(RinexObsID_custom_example gnsstk)

add_executable(Stats_example_1 Stats_example_1.cpp)
target_link_libraries(Stats_example_1 gnsstk)

add_executable(NavFilter_example_1 NavFilter_example_1.cpp)
target_link_libraries(NavFilter_example_1 gnsstk)

add_executable(CommandOption_example_1 CommandOption_example_1.cpp)
target_link_libraries(CommandOption_example_1 gnsstk)

add_executable(CommandOption_example_2 CommandOption_example_2.cpp)
target_link_libraries(CommandOption_example_2 gnsstk)

add_executable(CommandOption_example_3 CommandOption_example_3.cpp)
target_link_libraries(CommandOption_example_3 gnsstk)

add_executable(CommandOption_example_4 CommandOption_example_4.cpp)
target_link_libraries(CommandOption_example_4 gnsstk)

add_executable(CommandOption_example_5 CommandOption_example_5.cpp)
target_link_libraries(CommandOption_example_5 gnsstk)
